Fix overflow bug with issue card

--- a/src/components/presentational/Issue/Issue.module.scss
+++ b/src/components/presentational/Issue/Issue.module.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    overflow: hidden;
+    word-break: break-word;
 
     &:first-child {
         border-top-left-radius: 5px;
@@ -41,6 +43,7 @@
     .comment {
         display: flex;
         align-items: center;
+        word-break: keep-all;
 
         span {
             font-size: 1rem;
